Mdularize core